# nba_polymarket_data_fetcher

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/commands/: check-boxes.md  fetch-check.md  next-task.md  rewrite_prompt.md  session-start.md  status.md
.claude/rules/: api.md  coding.md  testing.md
.claude/specs/: client.md  fetchers.md  models.md  pipeline.md  storage.md
docs/: good_prompt_example.md  progress.md  project_overview.md
docs/milestones/: M1-core-infrastructure.md  M2-data-fetchers.md  M3-pipeline-orchestration.md  M4-data-quality.md  M5-nba-historical-coverage.md  README.md
sandbox/: debug.ipynb
scripts/: backfill.py  backfill_single_date.py  fetch_by_slug.py  run_pipeline.py  verify_coverage.py
src/polymarket/: cli.py  client.py  lookup.py  models.py  pipeline.py
src/polymarket/fetchers/: by_slug.py  markets.py  price_history.py  prices.py  trade_history.py
src/polymarket/storage/: debug_json.py  parquet.py  state.py
tests/: conftest.py  test_client.py  test_fetchers_by_slug.py  test_fetchers_markets.py  test_fetchers_price_history.py  test_fetchers_prices.py  test_fetchers_trade_history.py  test_integration.py  test_lookup.py  test_models.py  test_storage.py  test_storage_by_slug.py
