[project]
name = "nba-polymarket-data-fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pytz>=2026.1.post1",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "jupyter>=1.1.1",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]


[project.scripts]
run_pipeline = "polymarket.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
# select = ["E", "F", "I"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PD", "NPY", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "data"]

[tool.mypy]
strict = true
